<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>refbox_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for RCLL refbox communication</description>
  <maintainer email="wataru@kdel.org">Wataru UEMURA</maintainer>

  <license>BSD</license>

  <author>Tim Niemueller</author>
  <author email="niemueller@kbsg.rwth-aachen.de">Tim Niemueller</author>
  <author>Wataru UEMURA</author>
  <author email="wataru@kdel.org">Wataru UEMURA</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
